# cli

./: .gitignore  README.md  pyproject.toml  run.py
src/: __init__.py  __main__.py  main.py  utils.py
src/shared/: __init__.py  cli.py  insights.py  storage.py
src/tools/: README.md
src/tools/goals/: README.md  main.py
src/tools/manage/: README.md  main.py
src/tools/memo/: README.md  main.py
src/tools/plans/: README.md  main.py
src/tools/refactor/: README.md  main.py
src/tools/research/: README.md  __init__.py  analysis.py  export.py  main.py  session.py  sources.py
src/tools/sweep/: README.md  __init__.py  analyzer.py  cleaner.py  duplicates.py  formatter.py  main.py  organizer.py
src/tools/tasks/: README.md  __init__.py  analysis.py  creation.py  main.py  management.py
tasks/: 20250730-191544.json
