[tool.poetry]
name = "cli-tools"
version = "0.1.0"
description = "Collection of AI-powered CLI tools"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
cogency = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.scripts]
# Main unified entry point
cogency = "src.main:main"

# Central helper command
cli = "src.utils:main"

# Individual tool entry points
memo = "src.tools.memo.main:main"
tasks = "src.tools.tasks.main:main"
goals = "src.tools.goals.main:main"
plans = "src.tools.plans.main:main"
research = "src.tools.research.main:main"
refactor = "src.tools.refactor.main:main"
sweep = "src.tools.sweep.main:main"
manage = "src.tools.manage.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"